<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dogather_Login_Activity"
    android:background="@drawable/background_cover">
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/app_name_ide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dogather app"
        android:textSize="15sp"
        android:textColor="#ffd700"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/usr_name"
        android:layout_below="@+id/app_name_ide"
        android:layout_marginTop="100dp"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/usr_hint"/>
    <EditText
        android:id="@+id/usr_pwd"
        android:layout_below="@+id/usr_name"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/pwd_hint"
        />
    <Button
        android:text="@string/sign_in_text"
        android:id="@+id/sign_in"
        android:layout_below="@id/usr_pwd"
        android:layout_alignRight="@+id/usr_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"/>
  <TextView
      android:id="@+id/forgot_id_or_pwd"
      android:layout_below="@+id/sign_in"
      android:layout_alignLeft="@+id/usr_pwd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/forgot_sign_link"/>

    <Button
        android:text="@string/sign_up_text"
        android:id="@+id/sign_up"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"/>

</RelativeLayout>
